syntax = "proto3";

package identity;

option go_package = "github.com/RGood/shrdr/common/pkg/generated/identity;identity";

message User {
    string id = 1;
    string name = 2;
}

message LoginRequest {
    string username = 1;
}

message AuthInfo {
    string token = 1;
    User user = 2;
}

message LogoutRequest {
    string user_id = 1;
}

message LogoutResponse {
    bool success = 1;
}

message WhoamiRequest {
}

message WhoamiResponse {
    User user = 1;
}

service Authentication {
    rpc Whoami(WhoamiRequest) returns (WhoamiResponse);
    rpc Connect(LoginRequest) returns (stream AuthInfo);
}
